kapp/04-deployment.yml
#@ load("@ytt:data", "data")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bnp-demo
  namespace: #@ data.values.namespace
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll      
    keel.sh/pollSchedule: "@every 1m"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bnpp-demo
  template:
    metadata:
      labels:
        app: bnpp-demo
    spec:
      containers:
        - image: harbor.withtanzu.com/fmartin/bnpp-demo:latest
          name: app
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: "0.25"
              memory: 512Mi
              ephemeral-storage: "128Mi"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
            initialDelaySeconds: 60
            periodSeconds: 2
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
            initialDelaySeconds: 10
